--- a/CriminalIntent/app/src/main/res/values/strings.xml
+++ b/CriminalIntent/app/src/main/res/values/strings.xml
@@ -1,12 +1,9 @@
 <resources>
-    <string name="app_name">CriminalIntent</string>
-    <string name="crime_title_hint">Enter a title for the crime.</string>
-    <string name="crime_title_label">Enter a title for the crime.</string>
-    <string name="crime_details_label">Details</string>
-    <string name="crime_solved_label">Solved</string>
-    <string name="date_picker_title">Date of crime:</string>
-    <string name="new_crime">New Crime</string>
-    <string name="show_subtitle">Show Subtitle</string>
-    <string name="hide_subtitle">Hide Subtitle</string>
-    <string name="subtitle_format">%1$s crimes</string>
+    <string name="app_name">SmartList</string>
+    <string name="note_title_hint">Enter a title for your To-Do.</string>
+    <string name="note_title_label">Enter a title for the To-Do.</string>
+    <string name="note_details_label">Details</string>
+    <string name="note_completed_label">Completed</string>
+    <string name="details_picker_title">Details: </string>
+    <string name="new_note">New To-Do</string>
 </resources>
