--- a/CriminalIntent/app/src/main/res/values/strings.xml
+++ b/CriminalIntent/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="note_completed_label">Completed</string>
     <string name="details_picker_title">Details: </string>
     <string name="new_note">New To-Do</string>
+    <string name="show_subtitle">Subtitle</string>
 </resources>
