--- a/CriminalIntent/app/src/main/res/values/strings.xml
+++ b/CriminalIntent/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">SmartList</string>
     <string name="note_title_hint">Enter a title for your To-Do.</string>
     <string name="note_title_label">Title</string>
-    <string name="note_details_hint">Enter the details of you To-Do.</string>
+    <string name="note_details_hint">Enter the details of your To-Do.</string>
     <string name="note_details_label">Details</string>
     <string name="note_completed_label">Completed</string>
     <string name="details_picker_title">Details: </string>
