--- a/CriminalIntent/app/src/main/res/values/strings.xml
+++ b/CriminalIntent/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="note_title_label">Title</string>
     <string name="note_details_hint">Enter the details of your To-Do.</string>
     <string name="note_details_label">Details</string>
+    <string name="note_completed_label">Completed</string>
     <string name="details_picker_title">Details: </string>
     <string name="new_note">New To-Do</string>
     <string name="show_subtitle">Subtitle</string>
@@ -13,6 +14,5 @@
     <string name="group_label">Group</string>
     <string name="group_hint">Type what group you\'d like this To-Do in.</string>
     <string name="submit_button">Submit</string>
-    <string name="due_date_hint">Click to set date.</string>
-    <string name="due_time_hint">Click to set time.</string>
+
 </resources>
