Added priority spinner.

--- a/CriminalIntent/app/src/main/res/values/strings.xml
+++ b/CriminalIntent/app/src/main/res/values/strings.xml
@@ -14,5 +14,12 @@
     <string name="group_label">Group</string>
     <string name="group_hint">Type what group you\'d like this To-Do in.</string>
     <string name="submit_button">Submit</string>
+    <string-array name="priority_array">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+    </string-array>
 
 </resources>
